NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Factory__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Factory__c</fullName>
    <label>Factory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATHENS</fullName>
            </value>
            <value>
                <fullName>ATHENS STOCK</fullName>
            </value>
            <value>
                <fullName>SINGAPORE</fullName>
            </value>
            <value>
                <fullName>SING STOCK</fullName>
            </value>
            <value>
                <fullName>CTD STOCK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>