NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/Container_Factory_Rework_Comments__c.field-meta.xml
<CustomField>
    <fullName>Container_Factory_Rework_Comments__c</fullName>
    <label>Factory Rework Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>