NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Feature_Option_Map_Check__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Feature_Option_Map_Check__c</fullName>
    <label>Feature Option Map Check</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>