NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Freight_Terms__c</fullName>
    <description>Picklist field to be added under Production &amp; Scheduling Tab of Quote</description>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Sales_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIP- CIP</fullName>
                <label>CIP - CIP</label>
            </value>
            <value>
                <fullName>COLLECT - COL</fullName>
                <label>COLLECT - COLL</label>
            </value>
            <value>
                <fullName>DELIVERED AT PLACE - DAP</fullName>
            </value>
            <value>
                <fullName>DELIVERED DUTY PAID - DDP</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - N/A</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; ALLOWED - PPA</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; BILLED - PPB</fullName>
            </value>
            <value>
                <fullName>PREPAID - PPD</fullName>
            </value>
            <value>
                <fullName>FREIGHT COLLECT - C</fullName>
            </value>
            <value>
                <fullName>EX FACTORY – EXC</fullName>
                <label>EX FACTORY - EXC</label>
            </value>
            <value>
                <fullName>CARRIAGE AND INSURANCE PAID TO -CIP</fullName>
                <label>CARRIAGE AND INSURANCE PAID TO - CIP</label>
            </value>
            <value>
                <fullName>DELIVERED AT TERMINAL - DAT</fullName>
            </value>
            <value>
                <fullName>EX-FACTORY - EXW</fullName>
            </value>
            <value>
                <fullName>COST AND FREIGHT - CFR</fullName>
            </value>
            <value>
                <fullName>EX WORKS - EXW</fullName>
            </value>
            <value>
                <fullName>DELIVED AT PLACE - DAP</fullName>
            </value>
            <value>
                <fullName>DELIVED DUTY PAID - DDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>