NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Genset_Previous_ASO_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Genset_Previous_ASO_ID__c</fullName>
    <label>Genset Previous ASO ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>