NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_GENSET_RevNumber__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_GENSET_RevNumber__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GENSET RevNumber</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>