NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Gross_Margin_w_Warranty1__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Gross_Margin_w_Warranty1__c</fullName>
    <formula>CONTAINER_Net_Sales1__c -  CONTAINER_Net_Cost1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin w/ Warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>