NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Gross_Margin_wo_Warranty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Gross_Margin_wo_Warranty__c</fullName>
    <description>Container Gross Margin w/o Warranty</description>
    <label>Gross Margin w/o Warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>