NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_GrossMargin_w_Warranty1__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_GrossMargin_w_Warranty1__c</fullName>
    <formula>IF(OR(ISBLANK(CONTAINER_Gross_Margin_w_Warranty1__c), CONTAINER_Gross_Margin_w_Warranty1__c = 0,ISBLANK(CONTAINER_Net_Sales1__c ), CONTAINER_Net_Sales1__c  = 0),
0, (CONTAINER_Gross_Margin_w_Warranty1__c / CONTAINER_Net_Sales1__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin w/ Warranty %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>