NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Is_Cloned__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_Cloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be checked only if the quote is cloned</description>
    <label>Is Cloned</label>
    <type>Checkbox</type>
</CustomField>