NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Is_RequestedShipDate_Updated__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_RequestedShipDate_Updated__c</fullName>
    <label>Is RequestedShipDate Updated</label>
    <length>48</length>
    <type>Text</type>
</CustomField>