NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Is_Special_Selected__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_Special_Selected__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Is Special Selected</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>