NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_IS_TentativeProdSchd_Updated__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_IS_TentativeProdSchd_Updated__c</fullName>
    <label>Is TentativeProductionSchedule Updated</label>
    <length>48</length>
    <type>Text</type>
</CustomField>