NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_IsRevised__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_IsRevised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRevised</label>
    <type>Checkbox</type>
</CustomField>