NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Job_Cost__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Job_Cost__c</fullName>
    <label>Job Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>