NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Check_Out__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Check_Out__c</fullName>
    <label>List Check Out</label>
    <length>255</length>
    <type>Text</type>
</CustomField>