NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Contract_Obligation__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Contract_Obligation__c</fullName>
    <label>List Contract Obligation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>