NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Gross_Margin_w_o_Warranty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Gross_Margin_w_o_Warranty__c</fullName>
    <label>List Gross Margin w/o Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>