NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Price__c</fullName>
    <formula>IF(BEGINS(RecordType.DeveloperName, &apos;CONTAINER&apos;), CONTAINER_Unit_Base_Price_Sales__c + 
CONTAINER_Standard_Option_Sales__c + 
CONTAINER_Special_Options_Sales__c + 
CONTAINER_Extended_Warranty_Sales__c + 
CONTAINER_Special_Requirement_Sales__c + 
CONTAINER_Total_Contract_Obligation__c + 
CONTAINER_Total_Extended_AppliedSales__c + 
CONTAINER_Total_Spare_Parts__c  +  
CONTAINER_Total_ORBCOMM_AppliedCost__c,  SBQQ__NetAmount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>