NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Special_Requirement__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Special_Requirement__c</fullName>
    <label>List Special Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>