NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Standard_Option__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Standard_Option__c</fullName>
    <label>List Standard Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>