NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_List_Unit_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_List_Unit_Base_Price__c</fullName>
    <label>List Unit Base Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>