NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Margin_w_warranty__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Margin_w_warranty__c</fullName>
    <label>Margin w/ warranty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>