NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Method_of_Shipment__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Method_of_Shipment__c</fullName>
    <description>Picklist field to be added under Production &amp; Scheduling Tab of Quote</description>
    <label>Method of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Sales_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIR FREIGHT - 461-63-02 - AF</fullName>
            </value>
            <value>
                <fullName>OCEAN FREIGHT - 461-63-02 - OF</fullName>
            </value>
            <value>
                <fullName>SURFACE FREIGHT - 461-63-02 – SF</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - 461-63-02 - NA</fullName>
            </value>
            <value>
                <fullName>RAIL FREIGHT - 461-63-02 - RF</fullName>
            </value>
            <value>
                <fullName>AIR FREIGHT - AF</fullName>
            </value>
            <value>
                <fullName>OCEAN FREIGHT - OF</fullName>
            </value>
            <value>
                <fullName>SURFACE FREIGHT - SF</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>