NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Method_of_Shipment_GENSET__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Method_of_Shipment_GENSET__c</fullName>
    <description>Container genset record type field values</description>
    <label>Method of Shipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AIR FREIGHT - 461-63-02 - AF</fullName>
            </value>
            <value>
                <fullName>OCEAN FREIGHT - 461-63-02 - OF</fullName>
            </value>
            <value>
                <fullName>SURFACE FREIGHT - 461-63-02 – SF</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - 461-63-02 - NA</fullName>
            </value>
            <value>
                <fullName>RAIL FREIGHT - 461-63-02 - RF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>