NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Model_Number__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>