NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Net_Cost1__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_Cost1__c</fullName>
    <formula>( (CONTAINER_Total_Commission__c  +  CONTAINER_Total_Certification__c  +  CONTAINER_Total_Check_Out__c  +  CONTAINER_Total_Extended_Applied_Cost__c + CONTAINER_Total_Freight_AppliedCost__c + CONTAINER_Total_Job_Cost__c  +  CONTAINER_Total_ORBCOMM_RI_AppliedCost__c)  +  CONTAINER_Cost_Unit_Base_Price__c  +  CONTAINER_Standard_Option_Cost__c  +  CONTAINER_Special_Options_Cost__c  +  CONTAINER_Extended_Warranty_Cost__c  +  CONTAINER_Special_Requirement_Cost__c  +  CONTAINER_Cost_CorrectionFx__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>