NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Net_Sales1__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_Sales1__c</fullName>
    <formula>( CONTAINER_Cost_Contract_Price__c  - (CONTAINER_Total_Contract_Obligation__c  +  CONTAINER_Total_Extended_AppliedSales__c  +  CONTAINER_Total_Spare_Parts__c  +  CONTAINER_Total_ORBCOMM_AppliedCost__c +  CONTAINER_Total_Freight_Applied_to_Sales__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>