NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Net_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_Sales_Price__c</fullName>
    <description>Container Net Sales Price</description>
    <label>Net Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>