NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_NT_RevNumber__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_NT_RevNumber__c</fullName>
    <label>NT RevNumber</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>