NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Order__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Order__c</fullName>
    <formula>IF(ISPICKVAL(CONTAINER_Status__c ,&apos;ASO Released&apos;),NOW(),IF(ISPICKVAL(CONTAINER_Status__c ,&apos;Job # Issued&apos;),NOW(),NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>