NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Order_Date__c</fullName>
    <description>Container Order Date</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>