NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Ordered__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Container Ordered</description>
    <label>Ordered</label>
    <type>Checkbox</type>
</CustomField>