NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Other_Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Other_Freight_Terms__c</fullName>
    <label>Other Freight Terms</label>
    <length>48</length>
    <type>Text</type>
</CustomField>