NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Payment_Terms_GENSET__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Payment_Terms_GENSET__c</fullName>
    <description>Container genset record type field values</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CASH IN ADVANCE - CIA</fullName>
            </value>
            <value>
                <fullName>LETTER OF CREDIT - LOC</fullName>
            </value>
            <value>
                <fullName>NET 30 DAYS - N30</fullName>
            </value>
            <value>
                <fullName>NET 45 DAYS - N45</fullName>
            </value>
            <value>
                <fullName>NET 60 DAYS - N60</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - NAO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>