NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_PID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PID__c</fullName>
    <label>PID #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>