NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PO_Number__c</fullName>
    <label>Customer PO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>