NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Previous_order_was_when__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Previous_order_was_when__c</fullName>
    <description>Container Previous order was when</description>
    <label>Previous order was when</label>
    <type>Date</type>
</CustomField>