NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Product__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product__c</fullName>
    <label>Product #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>