NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Product_Desc_and_Unit_Prices__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Desc_and_Unit_Prices__c</fullName>
    <label>Product Desc and Unit Prices</label>
    <length>130768</length>
    <type>Html</type>
</CustomField>