NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Name__c</fullName>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>