NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Product_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Number</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>