NATTQA-ENV/force-app/main/default/objects/SBQQ__Quote__c/fields/CONTAINER_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Product_Type__c</fullName>
    <formula>IF(RecordType.DeveloperName = &quot;CONTAINER_GENSET_Quote&quot;, &quot;GENSET&quot;, IF(RecordType.DeveloperName = &quot;CONTAINER_NT_Quote&quot;,&quot;NT&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>